<resources>
    <string name="app_name">Marketim</string>
    <string name="login_header">MARKETİM</string>
    <string name="login_placeholder_username">Kullanıcı Adı</string>
    <string name="login_placeholder_password">Şifre</string>
    <string name="login_remember_me">Beni Hatırla</string>
    <string name="login_action">Giriş</string>
    <string name="orders_my_order">Siparişlerim</string>
    <string name="orders_logout">Çıkış Yap</string>
    <string name="orders_prompt_logout">Oturumu sonlandırmak istediğinize emin misiniz?</string>
    <string name="orders_prompt_logout_no">Hayır</string>
    <string name="orders_prompt_logout_yes">Evet</string>
</resources>
