<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="state" type="com.kemalatli.techchallenge.features.login.LoginState" />
        <variable name="viewmodel" type="com.kemalatli.techchallenge.features.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:textAppearance="@style/TextAppearance.TechChallenge.Header"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/login_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        </androidx.appcompat.widget.AppCompatTextView>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/usernameContainer"
            app:layout_constraintVertical_bias="0.7"
            app:layout_constraintVertical_chainStyle="packed"
            android:hint="@string/login_placeholder_username"
            android:layout_marginStart="@dimen/login_margin_horizontal"
            android:layout_marginEnd="@dimen/login_margin_horizontal"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/passwordContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/username"
                android:text="@={state.username}"
                android:inputType="text"
                android:textAllCaps="false"
                android:drawableStart="@drawable/icon_account"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordContainer"
            android:hint="@string/login_placeholder_password"
            android:layout_marginStart="@dimen/login_margin_horizontal"
            android:layout_marginEnd="@dimen/login_margin_horizontal"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@id/usernameContainer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/rememberMe"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:text="@={state.password}"
                android:inputType="textPassword"
                android:drawableStart="@drawable/icon_lock"
                android:drawablePadding="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/rememberMe"
            android:checked="@={state.rememberMe}"
            android:text="@string/login_remember_me"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/passwordContainer"
            app:layout_constraintBottom_toTopOf="@id/login"
            android:layout_marginStart="@dimen/login_margin_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

        </androidx.appcompat.widget.AppCompatCheckBox>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:onClick="@{()->viewmodel.login()}"
            android:text="@string/login_action"
            android:layout_marginStart="@dimen/login_margin_horizontal"
            android:layout_marginEnd="@dimen/login_margin_horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rememberMe"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

        </com.google.android.material.button.MaterialButton>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>