<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>
        <variable name="state" type="com.kemalatli.techchallenge.features.order.OrdersState" />
        <variable name="loginViewModel" type="com.kemalatli.techchallenge.features.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:focusableInTouchMode="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                app:contentInsetStart="0dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/TextAppearance.TechChallenge.Toolbar"
                    android:text="@string/app_name"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                </androidx.appcompat.widget.AppCompatTextView>
            </com.google.android.material.appbar.MaterialToolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swipeRefresh"
            app:refreshing="@{state.loading}"
            app:layout_constraintTop_toBottomOf="@id/appBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/bottomActions"
            android:layout_width="0dp"
            android:layout_height="0dp">
            <com.airbnb.epoxy.EpoxyRecyclerView
                android:id="@+id/recyclerView"
                app:itemSpacing="16dp"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottomActions"
            android:padding="10dp"
            android:background="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_width="0dp"
            android:layout_height="wrap_content">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/myOrders"
                style="@style/Widget.TechChallenge.Button.Outlined"
                android:layout_marginEnd="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:text="@string/orders_my_order"
                app:layout_constraintEnd_toStartOf="@id/logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            </com.google.android.material.button.MaterialButton>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/logout"
                android:onClick="@{()-> loginViewModel.logout()}"
                android:layout_marginStart="5dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/myOrders"
                app:layout_constraintEnd_toEndOf="parent"
                android:text="@string/orders_logout"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
            </com.google.android.material.button.MaterialButton>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>